[gd_scene load_steps=3 format=3 uid="uid://rwawmt27ljkw"]

[ext_resource type="Script" path="res://scripts/ui/LoseScreen.gd" id="1_gu8nf"]
[ext_resource type="PackedScene" uid="uid://b6bhkd2epc32x" path="res://uiScenes/uiComponents/ui_transition.tscn" id="2_7qohj"]

[node name="lose_screen" type="Control" node_paths=PackedStringArray("uiTransition")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_gu8nf")
uiTransition = NodePath("UITransition")

[node name="restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.65
focus_mode = 0
text = "Restart"

[node name="continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.675
anchor_right = 0.7
anchor_bottom = 0.725
focus_mode = 0
text = "Continue"

[node name="menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.75
anchor_right = 0.7
anchor_bottom = 0.8
focus_mode = 0
text = "Menu"

[node name="loseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.3
offset_right = 1.0
theme_override_font_sizes/font_size = 72
text = "YOU LOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UITransition" parent="." node_paths=PackedStringArray("control") instance=ExtResource("2_7qohj")]
control = NodePath("..")

[connection signal="pressed" from="restart" to="." method="_restart_pressed"]
[connection signal="pressed" from="continue" to="." method="_continue_pressed"]
[connection signal="pressed" from="menu" to="." method="_menu_pressed"]
